--- a/app/src/app/app.component.html
+++ b/app/src/app/app.component.html
@@ -1,7 +1,7 @@
 <div class="p-3 px-md-4 mb-3 bg-white border-bottom shadow-sm">
     <div class="container">
         <div class="d-flex flex-column flex-md-row align-items-center">
-            <h5 class="my-0 mr-md-auto font-weight-normal">Products</h5>
+            <h5 class="my-0 mr-md-auto font-weight-normal">Products App</h5>
         </div>
     </div>
 </div>
