--- a/app/src/app/products-list/components/products-list/products-list.component.html
+++ b/app/src/app/products-list/components/products-list/products-list.component.html
@@ -7,6 +7,11 @@
     </div>
 </div>
 
+<div class="text-center" *ngIf="isLoading$ | async">
+    <div class="spinner-border" role="status"></div>
+    <div>Loading...</div>
+</div>
+
 <div class="card mb-3">
     <div class="card-body">
         <h5 class="card-title">
