--- a/app/src/app/create-product/components/create-product.component.html
+++ b/app/src/app/create-product/components/create-product.component.html
@@ -11,6 +11,10 @@
 <div class="row">
     <div class="col-lg-8 offset-lg-2">
 
+        <div class="alert alert-success" *ngIf="isSuccess$ | async">
+            Data saved successfully.
+        </div>
+
         <app-product-form
             [isSubmitted]="isSubmitted$ | async"
             [errors]="serverErrors$ | async"
