Reset form action

--- a/app/src/app/create-product/components/create-product.component.html
+++ b/app/src/app/create-product/components/create-product.component.html
@@ -18,7 +18,7 @@
         <app-product-form
             [isSubmitted]="isSubmitted$ | async"
             [errors]="serverErrors$ | async"
-            (formSubmit)="onSubmit($event)"></app-product-form>
+            (formSubmit)="onSubmit($event)" #productForm></app-product-form>
 
     </div>
 </div>
